helm/redis/service-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: 32009
