helm/redis/redis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: redis.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-master
                port:
                  number: 6379
